--- a/style.css
+++ b/style.css
@@ -97,6 +97,8 @@ body {
   line-height: 1.5;
   /* 5. Improve text rendering */
   -webkit-font-smoothing: antialiased;
+
+  font-family: "Epilogue", sans-serif;
 }
 
 /* 6. Improve media defaults */
@@ -150,41 +152,105 @@ ul {
   padding: 0;
 }
 
-/*
-    10. Create a root stacking context
-  */
 #root,
 #__next {
   isolation: isolate;
 }
 
+/* custom styles */
+.backdrop {
+  position: fixed;
+  display: none;
+  top: 0;
+  left: 0;
+  z-index: -2;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 .main-header {
   display: none;
+  padding: 14px 72px;
+  background-color: var(--clr-neutral-gray-500);
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+.main-header .menu {
+  display: flex;
+  align-items: center;
 }
 .main-header ul {
   display: flex;
-  gap: 1rem;
+  gap: 1.5rem;
   align-items: center;
+}
+
+.main-header .page_item a,
+.mobile-nav__container {
+  font-size: var(--fs-400);
+  line-height: 1.5rem;
+  padding: 1rem 0.75rem;
+  font-weight: var(--fw-medium);
+  color: var(--clr-neutral-white);
+}
+
+.toggle-button {
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+
+.toggle-button::after {
+  content: "";
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='25' viewBox='0 0 24 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2.75281 18.4997H21.2528C21.667 18.4997 22.0028 18.8355 22.0028 19.2497C22.0028 19.6294 21.7207 19.9432 21.3546 19.9928L21.2528 19.9997H2.75281C2.3386 19.9997 2.00281 19.6639 2.00281 19.2497C2.00281 18.87 2.28497 18.5562 2.65104 18.5065L2.75281 18.4997H21.2528H2.75281ZM2.75281 12.0027H21.2528C21.667 12.0027 22.0028 12.3385 22.0028 12.7527C22.0028 13.1324 21.7207 13.4462 21.3546 13.4959L21.2528 13.5027H2.75281C2.3386 13.5027 2.00281 13.1669 2.00281 12.7527C2.00281 12.373 2.28497 12.0592 2.65104 12.0095L2.75281 12.0027H21.2528H2.75281ZM2.75195 5.50293H21.252C21.6662 5.50293 22.002 5.83872 22.002 6.25293C22.002 6.63263 21.7198 6.94642 21.3537 6.99608L21.252 7.00293H2.75195C2.33774 7.00293 2.00195 6.66714 2.00195 6.25293C2.00195 5.87323 2.28411 5.55944 2.65018 5.50978L2.75195 5.50293H21.252H2.75195Z' fill='white'/%3E%3C/svg%3E%0A");
+  display: block;
+  height: 1.5rem;
+  width: 1.5rem;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+/* mobile-nav */
+
+.mobile-nav {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 15px 25px;
+  background-color: var(--clr-neutral-gray-500);
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+
+.mobile-nav__container {
+  display: none;
+  position: absolute;
+  z-index: 101;
+  top: 0;
+  left: 0;
+  background: var(--clr-neutral-gray-800);
+  width: 80%;
+  height: 100vh;
+  transform: translateX(-100%);
+  transition: transform 4s ease-in-out;
+}
+
+.mobile-nav__logo {
+  width: 110px;
+  height: 40px;
 }
 
 .menu-item {
   padding: 1rem;
 }
-
-.mobile-nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.mobile-nav__container {
-  display: none;
-}
-
-.visible {
+.open {
   display: block;
 }
-.invisible {
-  display: none;
+.mobile-nav__container.open {
+  transform: translateX(0);
 }
 @media (min-width: 767px) {
   .main-header {
