finish the desktop hero section

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ ul {
 .main-header {
   display: none;
   padding: 14px 72px;
-  background-color: var(--clr-neutral-gray-500);
+  background-color: transparent;
   position: fixed;
   top: 0;
   right: 0;
@@ -258,7 +258,7 @@ ul {
   width: 100%;
   justify-content: space-between;
   padding: 15px 25px;
-  background-color: var(--clr-neutral-gray-500);
+  background-color: transparent;
   position: fixed;
   top: 0;
   right: 0;
@@ -302,4 +302,82 @@ ul {
   .backdrop {
     display: none;
   }
+}
+
+/* HERO SECTION */
+
+.container {
+  position: relative;
+  z-index: -1;
+}
+
+#hero span {
+  background: linear-gradient(
+      to right,
+      hsla(221, 42%, 15%, 0),
+      hsla(221, 42%, 15%, 0.8),
+      hsla(221, 42%, 15%, 1)
+    ),
+    hsla(221, 42%, 15%, 0.5);
+}
+
+.wp-block-cover__inner-container {
+  padding-top: 161px;
+  /* padding-bottom: 146px; */
+  padding-left: 72px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  width: 50% !important;
+}
+.wp-block-cover__inner-container .hero-textbox {
+  background-color: hsla(0, 0%, 100%, 0.08);
+  color: var(--clr-neutral-white);
+  border-radius: 36px;
+  font-weight: var(--fw-medium);
+  line-height: 24px;
+  padding: 0.5rem 1.5rem;
+  font-size: var(--fs-400);
+  letter-spacing: -2%;
+  margin-bottom: 1rem;
+}
+
+.wp-block-cover__inner-container h1 {
+  font-size: 56px;
+  font-weight: 600;
+  letter-spacing: -2%;
+  color: var(--clr-neutral-white);
+}
+.hero-last-para {
+  margin-top: 1rem;
+}
+
+.slider {
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  justify-content: center;
+  margin-top: 94px;
+}
+.slider-item {
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 200000px;
+  background-color: var(--clr-neutral-gray-500);
+}
+.slider .item-1 {
+  background-color: var(--clr-neutral-white) !important;
+}
+.btn---cta {
+  margin-top: 1.5rem !important;
+}
+
+.btn---cta a {
+  padding: 1.125rem 2.5rem;
+  line-height: 24px;
+  letter-spacing: 0;
+  font-weight: var(--fw-medium);
+  font-size: var(--fs-400);
 }
