--- a/style.css
+++ b/style.css
@@ -54,33 +54,50 @@
   /* font weight */
   --fw-regular: 400;
   --fw-medium: 500;
-  --fw-bold: 900;
+  --fw-semi-bold: 600;
+  --fw-bold: 700;
+  --fw-bolder: 900;
 
   /* font size */
+  --fs-300: 0.75rem;
   --fs-400: 1rem;
+  --fs-500: 1.25rem;
+  --fs-600: 1.5rem;
+  --fs-700: 2rem;
+  --fs-800: 2.5rem;
+  --fs-900: 3rem;
+  --fs-950: 3.5rem;
   --fs-nav: var(--fs-400);
+  --fs-body: var(--fs-400);
+  --fs-primary-heading: var(--fs-950);
+  --fs-secondary-heading: var(--fs-900);
+  --fs-tertiary-heading: var(--fs-800);
+  --fs-card-heading: var(--fs-600);
+  --fs-carousel-heading: var(--fs-700);
+  --fs-button: var(--fs-400);
 }
 
-@media (min-width: 48rem) {
+@media (max-width: 1024px) {
   :root {
-    --fs-body: var(--fs-400);
-    --fs-primary-heading: var(--fs-800);
-    --fs-secondary-heading: var(--fs-700);
     --fs-nav: var(--fs-500);
+    --fs-body: var(--fs-400);
+    --fs-primary-heading: var(--fs-700);
+    --fs-secondary-heading: var(--fs-700);
+    --fs-tertiary-heading: var(--fs-700);
+    --fs-card-heading: var(--fs-600);
+    --fs-carousel-heading: var(--fs-500);
     --fs-button: var(--fs-400);
   }
 }
 
 /* CSS Reset */
 
-/* 1. Use a more-intuitive box-sizing model */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
 
-/* 2. Remove default margin */
 * {
   margin: 0;
 }
@@ -93,11 +110,8 @@
 }
 
 body {
-  /* 4. Add accessible line-height */
   line-height: 1.5;
-  /* 5. Improve text rendering */
   -webkit-font-smoothing: antialiased;
-
   font-family: "Epilogue", sans-serif;
 }
 
@@ -130,7 +144,6 @@ h6 {
   overflow-wrap: break-word;
 }
 
-/* 9. Improve line wrapping */
 p {
   text-wrap: pretty;
 }
@@ -152,18 +165,13 @@ ul {
   padding: 0;
 }
 
-#root,
-#__next {
-  isolation: isolate;
-}
-
 /* custom styles */
 .backdrop {
   position: fixed;
   display: none;
   top: 0;
   left: 0;
-  z-index: -2;
+  z-index: 50;
   height: 100vh;
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.5);
@@ -174,6 +182,7 @@ ul {
   padding: 14px 72px;
   background-color: transparent;
   position: fixed;
+  z-index: 100;
   top: 0;
   right: 0;
 }
@@ -207,7 +216,7 @@ ul {
 
 .main-header ul li a,
 .mobile-nav__container {
-  font-size: var(--fs-400);
+  font-size: var(--fs-nav);
   line-height: 1.5rem;
   padding: 1rem 0.75rem;
   font-weight: var(--fw-medium);
@@ -260,6 +269,7 @@ ul {
   padding: 15px 25px;
   background-color: transparent;
   position: fixed;
+  z-index: 100;
   top: 0;
   right: 0;
 }
@@ -267,7 +277,7 @@ ul {
 .mobile-nav__container {
   display: none;
   position: absolute;
-  z-index: 101;
+  z-index: 100;
   top: 0;
   left: 0;
   background: var(--clr-neutral-gray-800);
@@ -307,18 +317,8 @@ ul {
 /* HERO SECTION */
 
 .container {
+  height: 100vh;
   position: relative;
-  z-index: -1;
-}
-
-#hero span {
-  background: linear-gradient(
-      to right,
-      hsla(221, 42%, 15%, 0),
-      hsla(221, 42%, 15%, 0.8),
-      hsla(221, 42%, 15%, 1)
-    ),
-    hsla(221, 42%, 15%, 0.5);
 }
 
 .wp-block-cover__inner-container {
@@ -333,23 +333,24 @@ ul {
 }
 .wp-block-cover__inner-container .hero-textbox {
   background-color: hsla(0, 0%, 100%, 0.08);
-  color: var(--clr-neutral-white);
+  color: var(--clr-neutral-white) !important;
   border-radius: 36px;
   font-weight: var(--fw-medium);
   line-height: 24px;
   padding: 0.5rem 1.5rem;
-  font-size: var(--fs-400);
+  font-size: var(--fs-300) !important;
   letter-spacing: -2%;
   margin-bottom: 1rem;
 }
 
 .wp-block-cover__inner-container h1 {
-  font-size: 56px;
-  font-weight: 600;
+  font-size: var(--fs-primary-heading) !important;
+  font-weight: var(--fw-semi-bold);
   letter-spacing: -2%;
-  color: var(--clr-neutral-white);
+  color: var(--clr-neutral-white) !important;
 }
 .hero-last-para {
+  font-size: var(--fs-body);
   margin-top: 1rem;
 }
 
@@ -360,6 +361,7 @@ ul {
   gap: 0.5rem;
   justify-content: center;
   margin-top: 94px;
+  margin-bottom: 44px;
 }
 .slider-item {
   width: 0.5rem;
@@ -379,5 +381,30 @@ ul {
   line-height: 24px;
   letter-spacing: 0;
   font-weight: var(--fw-medium);
-  font-size: var(--fs-400);
+  font-size: var(--fs-button);
+}
+
+@media (min-width: 1024px) {
+  .wp-block-cover__inner-container .hero-textbox {
+    font-size: var(--fs-400) !important;
+  }
+}
+
+/* Carousel */
+#carousel {
+  gap: 46px;
+  background-color: hsla(216, 100%, 98%, 1);
+}
+.carousel_heading {
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+#carousel h3 {
+  padding-top: 60px;
+}
+
+.carousel_items {
+  gap: 72px;
+  padding-bottom: 60px;
 }
